Revised to include one-jar bundling and initial refactor to clean up / design right

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,13 @@
       <jettyVersion>7.0.2.v20100331</jettyVersion>
    </properties>
 
+		<pluginRepositories>
+        <pluginRepository>
+            <id>onejar-maven-plugin.googlecode.com</id>
+            <url>http://onejar-maven-plugin.googlecode.com/svn/mavenrepo</url>
+        </pluginRepository>
+    </pluginRepositories>
+
    <dependencies>
       <dependency>
          <groupId>org.eclipse.jetty</groupId>
